include author in json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/*.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tyler Bates",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
